Fix mobile-render overlapping the announcement link

--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -139,6 +139,7 @@
       // Shift-up so we're not affected by the mask
       position: relative;
       bottom: 4.6875rem;
+      pointer-events: none;
 
       img {
         @media (max-width: @md) {
